# RGBEngine

./: CMakeLists.txt  README.md
include/: engine.h  rgbe.h  rgbeGraphics.h  rgbeInput.h
include/gfx/: glad.h  graphics.h  window.h
include/glad/: glad.h
include/graphics/: glad.h  graphics.h  shader.h  window.h
include/window-system/: glfw.h
src/: engine.c  glad.c  main.c  rgbe.c  rgbeGraphics.c  rgbeInput.c
src/gfx/: glad.c  graphics.c  shader.c  window.c
src/glad/: glad.c
src/graphics/: glad.c  graphics.c  shader.c  window.c
src/window_system/: glfw.c  glfw.cpp
